# X-Feed-Reader

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  config.yaml.example  docker-compose.yml  login_helper.py  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/: __init__.py  config.py  database.py  main.py  scheduler.py  scraper.py  summarizer.py  telegram_notifier.py  utils.py
web/: __init__.py  admin_seed.py  app.py  config.py  constants.py  http_client.py  prompts.py  scheduler_tasks.py  worker.py
web/db/: encryption.py  session.py
web/models/: __init__.py  base.py  briefing.py  scrape_run.py  subscription.py  tweet.py  user.py  user_settings.py
web/routers/: api.py  auth.py  dashboard.py  pages.py  webhooks.py
web/schemas/: auth.py  briefing.py  settings.py
web/services/: auth_service.py  delivery_service.py  email_service.py  pipeline_service.py  subscription_service.py  summary_service.py  twitter_oauth.py  user_service.py
web/services/feed_providers/: base.py  playwright_scraper.py  twitter_api.py
web/static/js/: app.js
web/templates/: base.html  error.html  landing.html  login.html
web/templates/dashboard/: _nav.html  billing.html  briefing_detail.html  briefings.html  index.html  settings.html
web/templates/email/: briefing.html
web/templates/partials/: briefing_card.html  settings_form.html  toast.html
